force-app/main/default/objects/Receivables_Summary__c/Receivables_Summary__c.object-meta.xml
<CustomObject>
    <!--
      READ-ONLY YARDI MIRROR (FSD 5.9.2/5.9.3). This comment is INSIDE the root element on
      purpose - a comment ABOVE the root breaks sf at source conversion.

      The guiding rule from FSD 5.9.2: the mirror holds no state and is overwritten on every
      sync, while the Case holds all workflow state and is never touched by the sync. Two
      consequences are encoded here and must not be reversed:

      1. enableHistory = false. The whole row is rewritten nightly; field history would record
         the sync, not a business event, and would be pure volume.
      2. NO persona permission set may grant Create/Edit/Delete on this object. The pattern to
         copy is Work_Order__c, which DPEG_PropertyMgmt_Edit's own description records as
         "deliberately excluded (Yardi read-only mirror)". Delinquency__c is the ANTI-pattern:
         it grants Edit to the whole PM group via sharingRules and DPEG_PropertyMgmt_Edit,
         which inverts the design. See HUB FILE REQUESTS in this build's report.

      GRAIN (user decision D-AR-4): one row per occupied UNIT, not per tenant. There is no
      Tenant object in this org; Unit__c is the existing Yardi mirror and already carries
      Yardi_Unit_Id__c, Property_Asset__c, Tenant_Name__c and Current_Monthly_Rent__c. A tenant
      occupying several suites therefore produces several rows - portfolio exposure per tenant
      is a REPORT-LEVEL roll-up (group on Tenant_Name__c, SUM Total_Outstanding_Amount__c), not
      a field on this object. Account__c is the seam for a future entity-level key.
    -->
    <description>Read-only nightly mirror of the Yardi receivables ledger, one row per occupied unit (FSD 5.9.3/5.9.4). Holds the charge-type split, five aging buckets, days past due and months outstanding. Never edited by a human and never holds workflow state - all follow-up lives on the Delinquency Case. Overwritten in full on every sync run.</description>
    <label>Receivables Summary</label>
    <nameField>
        <displayFormat>RCV-{0000}</displayFormat>
        <label>Receivables Summary Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Receivables Summaries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>