force-app/main/default/objects/Receivables_Summary__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>OPTIONAL, UNPOPULATED SEAM. Nothing reads or writes this today. It exists so that when tenant Accounts are created, the sync can populate it and the FSD 5.9.9 exposure ranking can group on a real entity instead of a free-text name - without changing any downstream artefact. Do not build logic against it until it is being populated.</description>
    <inlineHelpText>Reserved for a future tenant Account. Leave blank.</inlineHelpText>
    <label>Tenant Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Receivables Summaries</relationshipLabel>
    <relationshipName>Receivables_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>