force-app/main/default/objects/Receivables_Summary__c/fields/Aging_1_30_Amount__c.field-meta.xml
<CustomField>
    <fullName>Aging_1_30_Amount__c</fullName>
    <description>Aging bucket 2 of 5 (user decision D-AR-2): 1 to 30 days past due.</description>
    <inlineHelpText>Balance aged 1-30 days. Yardi-sourced and overwritten on every nightly sync. Never edit this value in Salesforce - it will be replaced.</inlineHelpText>
    <label>Aging 1-30 Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>