force-app/main/default/objects/Receivables_Summary__c/fields/Aging_31_60_Amount__c.field-meta.xml
<CustomField>
    <fullName>Aging_31_60_Amount__c</fullName>
    <description>Aging bucket 3 of 5 (user decision D-AR-2): 31 to 60 days past due.</description>
    <inlineHelpText>Balance aged 31-60 days. Yardi-sourced and overwritten on every nightly sync. Never edit this value in Salesforce - it will be replaced.</inlineHelpText>
    <label>Aging 31-60 Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>