force-app/main/default/objects/Receivables_Summary__c/fields/Aging_61_90_Amount__c.field-meta.xml
<CustomField>
    <fullName>Aging_61_90_Amount__c</fullName>
    <description>Aging bucket 4 of 5 (user decision D-AR-2): 61 to 90 days past due.</description>
    <inlineHelpText>Balance aged 61-90 days. Yardi-sourced and overwritten on every nightly sync. Never edit this value in Salesforce - it will be replaced.</inlineHelpText>
    <label>Aging 61-90 Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>