force-app/main/default/objects/Receivables_Summary__c/fields/Aging_90_Plus_Amount__c.field-meta.xml
<CustomField>
    <fullName>Aging_90_Plus_Amount__c</fullName>
    <description>Aging bucket 5 of 5 (user decision D-AR-2): more than 90 days past due. This bucket drives the red dashboard flag and the 90-day escalation in FSD 5.9.7.</description>
    <inlineHelpText>Balance aged more than 90 days. Yardi-sourced and overwritten on every nightly sync. Never edit this value in Salesforce - it will be replaced.</inlineHelpText>
    <label>Aging 90+ Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>