force-app/main/default/objects/Receivables_Summary__c/fields/Base_Rent_Outstanding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Base_Rent_Outstanding_Amount__c</fullName>
    <description>Portion of the total balance that is unpaid base rent. One of the four FSD 5.9.4 charge-type splits that break up the blended figure FSD 5.9.1 complains about.</description>
    <inlineHelpText>How much of the balance is base rent. Yardi-sourced and overwritten on every nightly sync. Never edit this value in Salesforce - it will be replaced.</inlineHelpText>
    <label>Base Rent Outstanding Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>