force-app/main/default/objects/Receivables_Summary__c/fields/Current_Amount__c.field-meta.xml
<CustomField>
    <fullName>Current_Amount__c</fullName>
    <description>Aging bucket 1 of 5 (user decision D-AR-2): billed but not yet past due.</description>
    <inlineHelpText>Billed but not yet past due. Yardi-sourced and overwritten on every nightly sync. Never edit this value in Salesforce - it will be replaced.</inlineHelpText>
    <label>Current Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>