force-app/main/default/objects/Receivables_Summary__c/fields/Days_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>Days_Past_Due__c</fullName>
    <description>Age in days of the OLDEST unpaid item, per FSD 5.9.4. Not the average and not the newest - the oldest, because that is what escalation is measured against.</description>
    <inlineHelpText>Age of the oldest unpaid item, in days. Yardi-sourced and overwritten on every nightly sync. Never edit this value in Salesforce - it will be replaced.</inlineHelpText>
    <label>Days Past Due</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>