force-app/main/default/objects/Receivables_Summary__c/fields/Late_Fee_Outstanding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Late_Fee_Outstanding_Amount__c</fullName>
    <description>Portion of the total balance that is unpaid late fees. Separated because a balance that is entirely late fees is a different collections conversation from unpaid rent.</description>
    <inlineHelpText>How much of the balance is late fees. Yardi-sourced and overwritten on every nightly sync. Never edit this value in Salesforce - it will be replaced.</inlineHelpText>
    <label>Late Fee Outstanding Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>