force-app/main/default/objects/Receivables_Summary__c/fields/NNN_CAM_Outstanding_Amount__c.field-meta.xml
<CustomField>
    <fullName>NNN_CAM_Outstanding_Amount__c</fullName>
    <description>Portion of the total balance that is unpaid NNN / CAM recovery. One of the four FSD 5.9.4 charge-type splits.</description>
    <inlineHelpText>How much of the balance is NNN / CAM recovery. Yardi-sourced and overwritten on every nightly sync. Never edit this value in Salesforce - it will be replaced.</inlineHelpText>
    <label>NNN-CAM Outstanding Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>