force-app/main/default/objects/Receivables_Summary__c/fields/Property_Asset__c.field-meta.xml
<CustomField>
    <fullName>Property_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The property the delinquent balance sits on. Drives the by-property views in FSD 6.5 and the property-scoped role visibility in FSD 7. Populated by the sync from the parent of the matched Unit.</description>
    <inlineHelpText>Set by the nightly Yardi sync from the unit’s property. Read-only.</inlineHelpText>
    <label>Property Asset</label>
    <referenceTo>Property_Asset__c</referenceTo>
    <relationshipLabel>Receivables Summaries</relationshipLabel>
    <relationshipName>Receivables_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>