force-app/main/default/objects/Receivables_Summary__c/fields/Responsible_Property_Manager__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Property_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The property manager accountable for chasing this balance (FSD 5.9.4 records this as Nikhil’s accountability ask). The nightly job stamps this user as the OwnerId of any Case it opens, and FSD 6.5 ranks open cases by it. Role-named rather than named for the target object, per the ARCHITECTURE.md User/Contact lookup exception.</description>
    <inlineHelpText>Who owns chasing this balance. Any Case opened for this row is assigned to this user.</inlineHelpText>
    <label>Responsible Property Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Responsible For Receivables</relationshipLabel>
    <relationshipName>Responsible_Receivables_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>