force-app/main/default/objects/Receivables_Summary__c/fields/Sync_Run__c.field-meta.xml
<CustomField>
    <fullName>Sync_Run__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The ingestion run that last wrote this row. Makes per-row staleness auditable: if a run halted, the rows it did not touch still point at an older Sync Run, so "which rows are stale" is a query rather than a guess.</description>
    <inlineHelpText>The nightly run that last updated this row. Open it to see whether that run completed or halted.</inlineHelpText>
    <label>Sync Run</label>
    <referenceTo>Sync_Run__c</referenceTo>
    <relationshipLabel>Receivables Summaries</relationshipLabel>
    <relationshipName>Receivables_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>