force-app/main/default/objects/Receivables_Summary__c/fields/Tenant_Name__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Name__c</fullName>
    <description>Tenant label as it appears in Yardi. Text, not a lookup: no Tenant object exists in this org, and ARCHITECTURE.md reserves the bare object name for a relationship field. This is the grouping column for the FSD 5.9.9 exposure rankings until Account__c is populated.</description>
    <inlineHelpText>Tenant name exactly as Yardi spells it. Two tenants with the same name at different properties will group together on the exposure ranking.</inlineHelpText>
    <label>Tenant Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>