force-app/main/default/objects/Receivables_Summary__c/fields/Total_Outstanding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Outstanding_Amount__c</fullName>
    <description>Total balance owed across every charge type. FSD 5.9.1 names this blended single figure as the core problem, which is why the four charge-type splits below exist alongside it. This is the SUM column for the FSD 5.9.9 dollar-exposure ranking.</description>
    <inlineHelpText>Everything the tenant owes, all charge types combined. Yardi-sourced and overwritten on every nightly sync. Never edit this value in Salesforce - it will be replaced.</inlineHelpText>
    <label>Total Outstanding Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>