force-app/main/default/objects/Receivables_Summary__c/listViews/Aged_90_Plus.listView-meta.xml
<ListView>
    <fullName>Aged_90_Plus</fullName>
    <columns>NAME</columns>
    <columns>Tenant_Name__c</columns>
    <columns>Property_Asset__c</columns>
    <columns>Unit__c</columns>
    <columns>Total_Outstanding_Amount__c</columns>
    <columns>Months_Outstanding__c</columns>
    <columns>Days_Past_Due__c</columns>
    <columns>Aging_Bucket__c</columns>
    <columns>Responsible_Property_Manager__c</columns>
    <columns>Yardi_Last_Synced_DateTime__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Aging_90_Plus_Amount__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Aged 90+ Days</label>
</ListView>