force-app/main/default/objects/Receivables_Summary__c/listViews/All_Receivables.listView-meta.xml
<ListView>
    <fullName>All_Receivables</fullName>
    <columns>NAME</columns>
    <columns>Tenant_Name__c</columns>
    <columns>Property_Asset__c</columns>
    <columns>Unit__c</columns>
    <columns>Total_Outstanding_Amount__c</columns>
    <columns>Months_Outstanding__c</columns>
    <columns>Days_Past_Due__c</columns>
    <columns>Aging_Bucket__c</columns>
    <columns>Responsible_Property_Manager__c</columns>
    <columns>Yardi_Last_Synced_DateTime__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Receivables</label>
</ListView>