force-app/main/default/objects/Receivables_Summary__c/listViews/Over_Two_Months_Of_Rent.listView-meta.xml
<ListView>
    <fullName>Over_Two_Months_Of_Rent</fullName>
    <columns>NAME</columns>
    <columns>Tenant_Name__c</columns>
    <columns>Property_Asset__c</columns>
    <columns>Unit__c</columns>
    <columns>Total_Outstanding_Amount__c</columns>
    <columns>Months_Outstanding__c</columns>
    <columns>Days_Past_Due__c</columns>
    <columns>Aging_Bucket__c</columns>
    <columns>Responsible_Property_Manager__c</columns>
    <columns>Yardi_Last_Synced_DateTime__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Months_Outstanding__c</field>
        <operation>greaterOrEqual</operation>
        <value>2</value>
    </filters>
    <label>Over Two Months of Rent</label>
</ListView>